Add transparent scroll bar, fix bubble rendering over cards problem, add scuba diver

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     </header>
 
     <div class="sky-bg" id="gradient-bg" style="position:relative;">
+        <div id="bubbles"></div>
         <section class="angle-bg section-padding" id="about">
             <div class="container">
                 <div class="row">
@@ -513,6 +514,7 @@
         </section>
 
         <img src="images/fishy-15.svg" id="fish3">
+        <img src="images/diver.svg" class="diver">
         <section class="section-padding" id="contributors">
             <div class="container">
                 <div class="row">
@@ -619,7 +621,7 @@
         </section>
 
         <footer class="footer-area relative" id="contact-page">
-            <div id="bubbles"></div>
+
             <div class="absolute footer-bg"></div>
             <img src="images/angler.svg" id="beluga">
             <div class="full-height footer-txt">
