Fix footer being cutoff when very long ratio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="zxx" xmlns:overflow-y="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8">
@@ -622,9 +622,8 @@
 
         <footer class="footer-area relative" id="contact-page">
 
-            <div class="absolute footer-bg"></div>
-            <img src="images/angler.svg" id="beluga">
-            <div class="full-height footer-txt">
+            <img src="images/angler.svg" id="angler">
+            <div class="footer-txt">
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-center">
@@ -635,6 +634,7 @@
                         </div>
                     </div>
                 </div>
+                <img src="images/Sea_Floor.svg" style="">
             </div>
         </footer>
     </div>
