Move images into specific folders

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#home-page" class="navbar-brand logo">
-                    <img src="images/homeicon.png" class="d-inline-block" style="max-height:32px">
+                    <img src="images/logos/homeicon.png" class="d-inline-block" style="max-height:32px">
                 </a>
             </div>
             <!--Logo/-->
@@ -150,7 +150,7 @@
             <div class="row v-center">
                 <div class="col-xs-2 col-md-2"></div>
                 <div class="col-xs-8 col-md-8 header-text text-center">
-                    <img src="images/vhhacksclear.png" style="max-height:20vh">
+                    <img src="images/logos/vhhacksclear.png" style="max-height:20vh">
                     <h2 id="title-text1">vhHacks 2020</h2>
                     <p id="title-text2">April 11 - 12<br>University of British Columbia</p>
                     <a data-toggle="collapse" data-parent="#accordion" href="#register"
@@ -212,7 +212,7 @@
                                     </div>
                                     <div class="col-xs-12 col-md-6">
                                         <div class="one" data-animation="animated fadeInRight">
-                                            <img src="images/vhhacksintro.png" alt="">
+                                            <img src="images/logos/vhhacksintro.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -526,7 +526,7 @@
         </section>
 
         <img src="images/swimming-fish/fishy-15.svg" id="fish3">
-        <img src="images/diver.svg" class="diver">
+        <img src="images/website-decor/diver.svg" class="diver">
         <section class="section-padding" id="contributors">
             <div class="container">
                 <div class="row">
@@ -634,7 +634,7 @@
 
         <footer class="footer-area relative" id="contact-page">
 
-            <img src="images/angler.svg" id="angler">
+            <img src="images/website-decor/angler.svg" id="angler">
             <div class="footer-txt">
                 <div class="container">
                     <div class="row">
