--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
 <div class="sky-bg">
     <div class="text-center">
         <a href="index.html" style="display: inline-block; padding-top: 5vh">
-            <img src="images/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
+            <img src="images/logos/homeicon.png" class="d-inline-block signuphome" style="max-height:50px">
         </a>
     </div>
 
