--- a/registration.html
+++ b/registration.html
@@ -66,7 +66,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="index.html" class="navbar-brand logo">
-                <img src="images/homeicon.png" class="d-inline-block signuphome" style="max-height:32px">
+                <img src="images/logos/homeicon.png" class="d-inline-block signuphome" style="max-height:32px">
             </a>
         </div>
     </div>
