Add sketch as sponsor

--- a/index.html
+++ b/index.html
@@ -567,6 +567,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div class="box">
+                            <div class="box-icon">
+                                <a href="https://sketch.com/"><img src="images/sponsors-and-partners/sketch-logo-dark.svg"
+                                                                     style="height:175px" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
                     <!--sponsors-and-partners end-->
                 </div>
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
