Add registration form to live

--- a/index.html
+++ b/index.html
@@ -163,8 +163,22 @@
                     <img src="images/logos/vhhacksclear.png" style="max-height:20vh">
                     <h2 id="title-text1">vhHacks 2020</h2>
                     <p id="title-text2">April 11 - 12<br>University of British Columbia</p>
-                    <a data-toggle="collapse" data-parent="#accordion" href="#register"
-                       aria-expanded="true" class="button">Mailing List</a>
+                    <!--<a data-toggle="collapse" data-parent="#accordion" href="#register"
+                       aria-expanded="true" class="button">Sign me up!</a>-->
+                    <a class="typeform-share button" href="https://frankhui.typeform.com/to/guawaU" data-mode="popup" target="_blank">Sign me up! </a>
+                    <script> (
+                        function() {
+                            var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/";
+                            if(!gi.call(d,id)){
+                                js=ce.call(d,"script");
+                                js.id=id;
+                                js.src=b+"embed.js";
+                                q=gt.call(d,"script")[0];
+                                q.parentNode.insertBefore(js,q);
+                                document.getElementById("navbar").style.zIndex = "10000";
+                            }
+                        })()
+                    </script>
                 </div>
                 <div class="col-xs-2 col-md-2"></div>
             </div>
@@ -174,13 +188,13 @@
                 <div class="container-fluid">
                     <div id="accordion">
                         <div id="register" class="panel-collapse collapse">
-                            <div class="container" style="padding-bottom: 15vh; padding-top: 8vh; border-radius:150px;">
+                            <!--<div class="container" style="padding-bottom: 15vh; padding-top: 8vh; border-radius:150px;">
                                 <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
                                 <iframe class="airtable-embed"
                                         src="https://airtable.com/embed/shr61FjcsorqHvqtl?backgroundColor=cyan"
                                         frameborder="0" onmousewheel="" width="100%"
                                         style="background: transparent; height: 75vh;"></iframe>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -657,9 +671,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-center">
-                            <p>&copy;Copyright 2018 All rights reserved. <br>Made with <i class="ti-heart"
-                                                                                          aria-hidden="true"></i>
-                                by <a href="https://github.com/inhostudios">InhoStudios</a>. <br>Built with Colid
+                            <p>Made with <i class="ti-heart" aria-hidden="true"></i> <br>Built with Colid
                                 by <a href="https://colorlib.com">Colorlib</a></p>
                         </div>
                     </div>
