Add covid statement

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx" xmlns:overflow-y="http://www.w3.org/1999/xhtml">
+<html class="no-js" lang="zxx">
 
 <head>
     <meta charset="utf-8">
@@ -116,6 +116,7 @@
         }
     }
 </script>
+
 <div id="hideable">
     <div class="preloader">
         <div class="sk-folding-cube">
@@ -127,6 +128,9 @@
     </div>
     <!--Mainmenu-area-->
     <div class="mainmenu-area" data-spy="affix" data-offset-top="100" id="navbar">
+        <div class="px-3 py-3" style="background-color: coral; color: white">
+            <img class="px-3 py-1" src="images/warning.svg" style="height: 4vh"> vhHacks has been postponed indefinitely due to COVID-19. Read our update <u><a href="covid19.html">here</a></u>
+        </div>
         <div class="container">
             <!--Logo-->
             <div class="navbar-header">
@@ -150,8 +154,9 @@
             </nav>
         </div>
     </div>
-    <!--Mainmenu-area/-->
 
+</div>
+    <!--Mainmenu-area/-->
 
     <!--Header-area-->
     <header class="header-area full-height relative v-center" id="home-page" style="border: none">
@@ -162,7 +167,7 @@
                 <div class="col-xs-8 col-md-8 header-text text-center">
                     <img src="images/logos/vhhacksclear.png" style="max-height:20vh">
                     <h2 id="title-text1">vhHacks 2020</h2>
-                    <p id="title-text2">April 11 - 12<br>University of British Columbia</p>
+                    <p id="title-text2">University of British Columbia</p>
                     <!--<a data-toggle="collapse" data-parent="#accordion" href="#register"
                        aria-expanded="true" class="button">Sign me up!</a>-->
                     <a class="typeform-share button" href="https://frankhui.typeform.com/to/guawaU" data-mode="popup" target="_blank">Sign me up! </a>
@@ -203,7 +208,8 @@
 
     </header>
     <div class="sky-bg" id="gradient-bg" style="border: none">
-<!--        <div id="bubbles"></div>-->
+
+        <!--        <div id="bubbles"></div>-->
         <section class="angle-bg section-padding" id="about">
             <div class="container">
                 <div class="row">
@@ -683,7 +689,6 @@
                         xmlns:dc="http://purl.org/dc/elements/1.1/"
                         xmlns:cc="http://creativecommons.org/ns#"
                         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                        xmlns:svg="http://www.w3.org/2000/svg"
                         xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink"
                         xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
@@ -799,7 +804,7 @@
                             id="path4"/>
                     <a
                             id="a2384"
-                            xlink:href="https://vhhacks.ca/index?ctf=true"
+                            xlink:href="?ctf=true"
                             target="_blank"><g
      transform="rotate(6.7713673,1133.7052,9981.6605)"
      style="isolation:isolate"
